fix alignment on dashboard tabs

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -112,26 +112,31 @@
 }
 
 .dashboard-page {
+  position: relative;
   width: 1050px;
   height: 500px;
   display: flex;
-  align-items: center;
   justify-content: center;
   // background-color: rgb(245, 245, 245);
-
   // border: 1px solid rgb(130, 130, 130);
   border-top: none;
   box-sizing: border-box;
   animation-name: load-page;
   animation-duration: 500ms;
   overflow-y: hidden;
+  font-size: 18px;
+
+  p {
+    position: absolute;
+    top: 40%;
+  }
 
   h2 {
     text-align: center;
     position: absolute;
     font-weight: normal;
     font-size: 14px;
-    margin-top: 10px;
+    margin-top: 40px;
   }
 }
 
@@ -249,6 +254,14 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+
+  .documents-placeholder {
+    margin-top: 40px;
+    font-size: 14px;
+    width: 500px;
+    text-align: center;
+    line-height: 150%;
+  }
 }
 
 .document-link {
